# nixos-dev-omero

./: README.md  flake.nix  pyproject.toml
initial/: .bash_profile  flake.nix  flake.nix.with_docker
